--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -14,7 +14,7 @@ actix-rt = { workspace = true, optional = true }
 actix-session = { workspace = true, optional = true }
 actix-web = { workspace = true, optional = true, features = ["macros"] }
 actix-web-actors = { workspace = true, optional = true }
-actix-web-httpauth = { workspace = true, optional = true }
+actix-web-httpauth= { workspace = true, optional = true }
 anyhow = { workspace = true }
 argon2 = { workspace = true, optional = true }
 bimap = {workspace = true}
@@ -71,6 +71,7 @@ ssr = [
   "dep:actix-session",
   "dep:actix-web",
   "dep:actix-web-actors",
+  "dep:actix-web-httpauth",
   "dep:argon2",
   "dep:db",
   "dep:diesel",
