--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ nanoid = "0.4"
 rand = "0.8"
 rand_core = "0.6"
 regex = "1.10"
+reqwest = "0.12.12"
 serde = { version = "1" }
 serde_json = { version = "1" }
 serde_with = { version = "3.9" }
