--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -20,3 +20,4 @@ serde_with = "3.9.0"
 thiserror = "*"
 bitfield-struct = "0.8"
 itertools = "0.13"
+clap = { version = "4.5.30", features = ["derive"] }
