--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -21,3 +21,4 @@ thiserror = "*"
 bitfield-struct = "0.8"
 itertools = "0.13"
 clap = { version = "4.5.30", features = ["derive"] }
+anyhow.workspace = true
