--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -24,3 +24,5 @@ clap = { version = "4.5.30", features = ["derive"] }
 anyhow.workspace = true
 pest = "2.7.15"
 pest_derive = "2.7.15"
+resvg = "0.44"
+usvg = "0.44"
