--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -47,6 +47,7 @@ regex = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+send_wrapper = { workspace = true }
 sha2 = { workspace = true }
 shared_types = { path = "../shared_types" }
 simple_logger = { workspace = true }
