better input and output encoding on server functions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ regex = "1.10"
 serde = { version = "1" }
 serde_json = { version = "1" }
 serde_with = { version = "3.9" }
+server_fn = { version = "0.7", features = ["cbor"] }
 sha2 = "0.10"
 send_wrapper = "0.6"
 simple_logger = "5.0"
