--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -44,6 +44,7 @@ markdown = {workspace = true}
 rand = { workspace = true }
 rand_core = { workspace = true }
 regex = { workspace = true }
+reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 server_fn = { workspace = true }
