--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="postgres://hive-dev@localhost:/hive-local"
-TEST_DATABASE_URL="postgres://hive-dev@localhost:/hive-test"
+TEST_DATABASE_URL="postgres://hive-dev@localhost:/hive-local"
 COOKIE_SECRET_KEY="top level"
+TEST_COOKIE_SECRET_KEY="level"
