--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -20,3 +20,9 @@ serde_with = "3.9.0"
 thiserror = "*"
 bitfield-struct = "0.8"
 itertools = "0.13"
+clap = { version = "4.5.30", features = ["derive"] }
+anyhow.workspace = true
+pest = "2.7.15"
+pest_derive = "2.7.15"
+resvg = "0.44"
+usvg = "0.44"
