--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ markdown = "1.0.0-alpha"
 nanoid = "0.4"
 rand = "0.9"
 regex = "1.10"
+reactive_stores = { version = "0.1" }
 reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1" }
 serde_json = { version = "1" }
