--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -11,3 +11,4 @@ codegen-backend = "cranelift"
 rustflags = ["--cfg=erase_components"]
 [build]
 rustflags = ["-Z", "threads=8", "--cfg=web_sys_unstable_apis"]
+target-dir = ".cargo/target"
