--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="postgres://hive-dev@localhost:/hive-local"
 TEST_DATABASE_URL="postgres://hive-dev@localhost:/hive-test"
-COOKIE_SECRET_KEY="top level"
+COOKIE_SECRET_KEY="top secret"
+JWT_SECRET_KEY="secret"
