--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ http-serde = { version = "2" }
 icondata = {version = "0.5"}
 indoc = "2"
 itertools = "0.14.0"
+jsonwebtoken = { version = "9.3.1" }
 lazy_static = "1.5"
 leptos = { version = "0.7", features = ["nightly"] }
 leptos-use = { version = "0.15" }
