Gets hydra and apis to pay nicely together

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DATABASE_URL="postgres://hive-dev@localhost:/hive-local"
 TEST_DATABASE_URL="postgres://hive-dev@localhost:/hive-test"
 COOKIE_SECRET_KEY="top secret"
 JWT_SECRET_KEY="secret"
+HIVE_HYDRA_BOT_NOKAMUTE_EASY_PASSWORD="hivegame"
+HIVE_HYDRA_BOT_NOKAMUTE_MEDIUM_PASSWORD="hivegame"
+HIVE_HYDRA_BOT_NOKAMUTE_HARD_PASSWORD="hivegame"
