--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -19,6 +19,7 @@ argon2 = { workspace = true, optional = true }
 bimap = {workspace = true}
 cfg-if = { workspace = true }
 chrono.workspace = true
+csv = { version = "1.3", optional = true }
 codee ={ workspace = true }
 console_error_panic_hook = { workspace = true }
 cookie = { workspace = true }
@@ -85,6 +86,7 @@ ssr = [
   "dep:actix-web",
   "dep:actix-web-actors",
   "dep:argon2",
+  "dep:csv",
   "dep:db",
   "dep:diesel",
   "dep:diesel_migrations",
