--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -18,7 +18,7 @@ anyhow = { workspace = true }
 argon2 = { workspace = true, optional = true }
 bimap = {workspace = true}
 cfg-if = { workspace = true }
-chrono.workspace = true
+chrono = { workspace = true }
 codee ={ workspace = true }
 console_error_panic_hook = { workspace = true }
 cookie = { workspace = true }
@@ -26,6 +26,7 @@ db = { path = "../db", optional = true  }
 diesel = { workspace = true, optional = true }
 diesel-async = { workspace = true, optional = true }
 diesel_migrations = { workspace = true, optional = true }
+futures = { workspace = true}
 hive = { path = "../engine" }
 http = { workspace = true }
 http-serde = { workspace = true }
@@ -94,6 +95,7 @@ ssr = [
   "dep:leptos_actix",
   "dep:rand",
   "dep:jsonwebtoken",
+  "dep:tokio",
   "leptos/ssr",
   "leptos-use/ssr",
   "leptos_meta/ssr",
