--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     build: ./dev-container/.
     depends_on:
       - postgres
-    command: cd /app/db 
+    working_dir: /app
     entrypoint: ["/bin/bash", "-c", "./dev-container/wait-for-it.sh -t 3 postgres:5432 -- ./dev-container/start_app.sh"]
     volumes:
       - .:/app
@@ -39,4 +39,3 @@ services:
     environment:
       DATABASE_URL: postgres://hive-dev@postgres:5432/hive-local
       TEST_DATABASE_URL: postgres://hive-dev@postgres:5432/hive-test
-      LEPTOS_HASH_FILES: true
