adds a naive and imperfect swiss gated to admins and 1 user

--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -25,6 +25,7 @@ itertools = { workspace = true }
 lazy_static = { workspace = true }
 nanoid = { workspace = true }
 regex = { workspace = true }
+rand = { workspace = true }
 serde = { workspace = true }
 serde_with = { workspace = true }
 shared_types = { path = "../shared_types/" }
