--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -48,6 +48,7 @@ lazy_static = { workspace = true }
 leptos = { workspace = true }
 leptos-use = { workspace = true }
 leptos_actix = { workspace = true, optional = true }
+leptos-chartistry = { workspace = true }
 leptos_i18n = { workspace = true }
 leptos_icons = { workspace = true }
 leptos_meta = { workspace = true }
