game controls work. Slight refactor there also

--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -70,6 +70,7 @@ simple_logger = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, optional = true }
 tokio-util = { workspace = true, optional = true }
+tokio-stream = { workspace = true, optional = true }
 tree-ds = {workspace = true}
 uuid = { workspace = true }
 walkdir = {workspace = true}
@@ -98,6 +99,7 @@ ssr = [
   "dep:jsonwebtoken",
   "dep:tokio",
   "dep:tokio-util",
+  "dep:tokio-stream",
   "leptos/ssr",
   "leptos-use/ssr",
   "leptos_meta/ssr",
