--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ skillratings = "0.27"
 thiserror = "2"
 tokio = { version = "1.46.1", features = ["full"] }
 tokio-util = {version = "0.7"}
+tokio-stream = {version = "0.1", features = ["sync"]}
 tree-ds = { version = "0.2.0", features = ["serde", "compact_serde", "async"] }
 uuid = { version = "1.17", features = ["v4", "js", "serde"] }
 walkdir = "2.5"
