--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -13,10 +13,11 @@ tokio = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
 nanoid = { workspace = true }
-rand = "0.9"
+rand = { workspace = true }
 dotenvy = { workspace = true }
 clap = { version = "4.0", features = ["derive"] }
 csv = "1.3"
 tempfile = "3.8"
-log = "0.4"
+log = { workspace = true }
 env_logger = "0.10"
+anyhow = "1.0"
