--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ dotenvy = "0.15"
 futures = "0.3"
 http = "1.3.1"
 http-serde = { version = "2" }
+gloo-timers = {version = "0.3"}
 icondata_core = "0.1"
 icondata_tb = "0.1"
 icondata_bi = "0.1"
